fixed aboutus.html on header background color

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
     </nav>
-    <header class="jumbotron">
+    <header class="jumbotron-header">
         <div class="container">
             <div class="row row-header align-items-center">
                 <div class="col-12 col-sm-6">
