--- a/aboutus.html
+++ b/aboutus.html
@@ -33,7 +33,7 @@
 
     
 
-    <header class="jumbotron">
+    <header class="jumbotron-header">
         <div class="container">
             <div class="row row-header align-items-center">
                 <div class="col-12 col-sm-6">
