--- a/aboutus.html
+++ b/aboutus.html
@@ -61,15 +61,46 @@
         </div>
 
         <div class="container">
-            <div class="row row-content align-items-center col-12 col-sm-6">
+        <div class="row row-content">
+            <div class="col-sm-6">
                 <h2>Our History</h2>
                 <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
                 <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
             </div>
-            <div class="col-12 col-sm">
+            <div class="col-sm">
+                <div class="card">
+                    <h3 class="card-header bg-primary text-white">Facts at a Glance </h3>
+                    <div class="card-body">
+                        <!-- description list-->
+                        <dl class="row">
+                            <dt class="col-6"> Started</dt>
+                            <dd class="col-6"> 3 Feb.2013</dd>
+                            <dt class="col-6"> Started</dt>
+                            <dd class="col-6"> 3 Feb.2013</dd>
+                            <dt class="col-6"> Started</dt>
+                            <dd class="col-6"> 3 Feb.2013</dd>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12">
+                <!-- no card header only card body-->
+                <div class="card card-body bg-light">
+                    <blockquote class="blockquote"> 
+                        <!-- button margin = 0-->
+                        <p class="mb-0">You better cut the pizza in four pieces
+                            because I'm not hungry enough to eat six.
+                        </p>
+                        <footer class="blockquote-footer">
+                            Yogi Berra,
+                            <cite title="Source Title">The Wit and Wisdom of Yogi Berra.</cite>
+                        </footer>
+                    </blockquote>
+                </div>
             </div>
         </div>
-
+        </div>
 
         <div class="container">
             <div class="row row-content align-items-center">
@@ -85,6 +116,34 @@
             </div>
        </div>
 
+       <div class="container">
+            <div class="row row-content">
+                <div class="col-12 col-sm-9">
+                    <h2> Facts &amp; Figures</h2>
+                    <div class="table table-responsive">
+                        <table class="table table-striped">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th> &nbsp;</th>
+                                    <th>2013</th>
+                                    <th>2014</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th>Special Events</th>
+                                    <td>3</td>
+                                    <td>20</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-3">
+
+                </div>
+            </div>
+    </div>
     </div>
 
     
