--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-old.css">
     <title>Ristorante Con Fusion</title>
     <script>
         function myFunction(){
@@ -36,9 +36,9 @@
                     <li class="nav-item"><a class="nav-link" href="#"> <span class="fa fa-list"></span> Menu </a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"> <span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
-                <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
-                        <span class="fa fa-sign-in"></span> Login
+                <span class="navbar-text" >
+                    <a id = "loginBtn" >
+                        <span class="fa fa-sign-in" ></span> Login
                     </a>
                 </span>
             </div>
@@ -49,7 +49,8 @@
         <div class="modal-dialog modal-lg" role="content">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Login</h4>
+                    <h4 class="modal-title">
+                        <font color="#fffff">Login</font> </h4>
                     <button type="button" class="close" data-dismiss="modal">
                         &times; 
                     </button>
@@ -87,7 +88,8 @@
         <div class="modal-dialog modal-lg" role="content">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Reserve Table</h4>
+                    <h4 class="modal-title">
+                        <font color="#fffff">Reserve Table</font> </h4>
                     <button type="button" class="close" data-dismiss="modal">
                         &times;
                     </button>
@@ -172,6 +174,7 @@
             </div>
         </div>
     </div>
+    
     <header class="jumbotron-header">
         <div class="container">
             <div class="row row-header align-items-center">
@@ -183,8 +186,7 @@
                     <img src="img/logo.png"class="image-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" 
-                    data-toggle="modal" data-target="#reserve">Reserve</a>
+                    <a role="button" class="btn btn-block nav-link btn-warning" id="reserveBtn">Reserve</a>
                 </div>
 
             </div>
@@ -439,6 +441,21 @@
 
 
 
+    });
+</script>
+
+<script>
+    $(document).ready(function(){
+        $("#loginBtn").click(function(){
+            $('#loginModal').modal('show');
+        });
+    });
+</script>
+<script>
+    $(document).ready(function() {
+        $("#reserveBtn").click(function(){
+            $('#reserve').modal('show');
+        });
     });
 </script>
 </body>
