--- a/index.html
+++ b/index.html
@@ -421,43 +421,8 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    
-<script>
-    $(document).ready(function(){
-        $("#mycarousel").carousel( { interval: 2000 } );
-        $("#carouselButton").click(function(){
-            // if the carouselbutton has children named fa-pause 
-            // this means it is a pause button
-            if($('#carouselButton').children('span').hasClass('fa-pause')){
-                $('#mycarousel').carousel('pause');
-                $('#carouselButton').children('span').removeClass('fa-pause');
-                $('#carouselButton').children('span').addClass('fa-play');
-            }else{
-                $('#mycarousel').carousel('cycle');
-                $('#carouselButton').children('span').removeClass('fa-play');
-                $('#carouselButton').children('span').addClass('fa-pause');
-            }
-        });
+    <script src="js/scripts.js"></script>
 
-
-
-    });
-</script>
-
-<script>
-    $(document).ready(function(){
-        $("#loginBtn").click(function(){
-            $('#loginModal').modal('show');
-        });
-    });
-</script>
-<script>
-    $(document).ready(function() {
-        $("#reserveBtn").click(function(){
-            $('#reserve').modal('show');
-        });
-    });
-</script>
 </body>
 
 </html>
